# alyvo-prospectresearch-software

./: .env.development  .env.production  .env.staging  .prettierignore  CHANGELOG.md  README.md  eslint.config.js  package-lock.json  package.json  tailwind.config.ts  tsconfig.json  vitest.config.ts
.claude/: settings.local.json
.cursor/rules/frontend/: architecture.mdc  project-context.mdc  style.mdc  vue-ui.mdc
.github/workflows/: build-compile-deploy-production.yml  build-compile-deploy-staging.yml  tests-deploy-release.yml
src-core/constants/: linkedinSelectableStatuses.ts  localBusinessOsmTypeLabels.ts  localBusinessSelectableStatuses.ts
src-core/services/: AuthApiService.ts  CredentialsStorageService.ts  HttpClientService.ts  LinkedinProspectApiService.ts  LinkedinStatsApiService.ts  LocalBusinessProspectApiService.ts  LocalBusinessStatsApiService.ts  ProspectsCacheService.ts  TauriWindowService.ts  UserSettingsApiService.ts  WeeklyObjectiveApiService.ts
src-core/types/enums/: linkedin.enums.ts  local-business.enums.ts  prospect-bulk-action.enums.ts
src-core/types/payload/: auth.types.ts  linkedin.types.ts  local-business.types.ts  prospect-bulk-action.types.ts  (+2 more)
src-core/utils/: lightStatusCellClickOutside.ts  localBusinessOsmLabels.ts  mergeListQueryFilters.ts  queryFilters.ts  throttle.ts
src-nuxt/: .env.development  .env.production  .env.staging  nuxt.config.ts
src-nuxt/app/: app.config.ts  app.vue  error.vue
src-tauri/: Cargo.toml  tauri.conf.json  updater-launcher.json  updater-manifest.json
src-tauri/capabilities/: default.json
src-tauri/icons/: icon.icns
src-tauri/legal/: license.txt
src-tauri/scripts/: beforeBuildCommand.ts  beforeDevCommand.ts  windowsSign.bat
src-tauri/src/: lib.rs  main.rs  prospects.rs
tests/unit/: formatOsmOpeningHours.test.ts  lightStatusCellClickOutside.test.ts
(+90 files in other folders)
