[package]
name = "alyvo_prospectresearch"
version = "0.0.0"
description = ""
authors = ["corentin recanzone"]
repository = ""
edition = "2024"
rust-version = "1.95.0"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[lib]
# The `_lib` suffix may seem redundant but it is necessary
# to make the lib name unique and wouldn't conflict with the bin name.
# This seems to be only an issue on Windows, see https://github.com/rust-lang/cargo/issues/8519
name = "alyvo_prospectresearch_lib"
crate-type = ["staticlib", "cdylib", "rlib"]

[build-dependencies]
tauri-build = { version = "2.6.1", features = [] }

[dependencies]
tauri = { version = "2.11.1", features = [ "macos-private-api", "tray-icon", "image-ico", "image-png"] }
tauri-plugin-opener = "2.5.4"
tauri-plugin-fs = "2.5.1"
tauri-plugin-dialog = "2.7.1"
tauri-plugin-notification = "2.3.3"
tauri-plugin-os = "2.3.2"
serde = { version = "1.0.228", features = ["derive"] }
serde_json = "1.0.149"

[target.'cfg(not(any(target_os = "android", target_os = "ios")))'.dependencies]
tauri-plugin-updater = "2.10.1"

# Server development
[profile.dev]
panic = "abort" # Éliminer la logique de nettoyage de panique coûteuse
opt-level = 0   # Moins d'optimisation pour un temps de compilation plus rapide et moins d'utilisation de mémoire

# Optimize build for Release
[profile.release]
panic = "abort"   # Éliminer la logique de nettoyage de panique coûteuse
codegen-units = 1 # Compiler les crates l'une après l'autre pour que le compilateur puisse optimiser mieux
lto = true        # Active les optimisations de link
opt-level = "s"   # Optimiser la taille du binaire
strip = true      # Supprimer automatiquement les symboles du binaire.
